--- a/01extra_cpp/01extra_cpp.tex
+++ b/01extra_cpp/01extra_cpp.tex
@@ -102,7 +102,7 @@
 		{\Large Gyakorlat jegyzet}
 		
 		$+/-$ megoldások
-	\end{center}A jegyzetet \textsc{Umann} Kristóf készítette \textsc{Horváth} Gábor  előadásán. (\today)
+	\end{center}A jegyzetet \textsc{Umann} Kristóf készítette \textsc{Horváth} Gábor gyakorlatán. (\today)
 	\section{Első $+/-$ megoldás}
 	Írjunk egy programot, mely a vezetéknevünk első magánhangzóját kicseréli az utolsó mássalhangzóra, \texttt{[]} operátor használata nélkül!
 	\begin{lstlisting}
