--- a/02extra_cpp/02extra_cpp.tex
+++ b/02extra_cpp/02extra_cpp.tex
@@ -102,7 +102,7 @@
 		
 		{\Large Extra órai jegyzet}
 	\end{center}
-	A jegyzetet \textsc{Umann} Kristóf készítette \textsc{Horváth} Gábor  előadásán.
+	A jegyzetet \textsc{Umann} Kristóf készítette \textsc{Horváth} Gábor gyakorlatán.
 	\medskip
 	
 	\section{Kivételek kezelése}
