--- a/03gy_cpp/03gy_cpp.tex
+++ b/03gy_cpp/03gy_cpp.tex
@@ -38,7 +38,7 @@
 		
 		3 óra.
 	\end{center}
-	A jegyzetet \textsc{Umann} Kristóf készítette \textsc{Porkoláb} Zoltán és \textsc{Horváth} Gábor előadása alapján. (\today)
+	A jegyzetet \textsc{Umann} Kristóf készítette \textsc{Porkoláb} Zoltán és \textsc{Horváth} Gábor gyakorlata alapján. (\today)
 %	\section{Kifejezések kiértékelése}
 %	Ugorjunk vissza egy korábbi példára.
 %	\begin{lstlisting}
