--- a/05gy_cpp/05gy_cpp.tex
+++ b/05gy_cpp/05gy_cpp.tex
@@ -35,9 +35,9 @@
 		
 		5. óra.
 	\end{center}
-	A jegyzetet \textsc{Umann} Kristóf készítette \textsc{Horváth} Gábor  előadásán. (\today)
+	A jegyzetet \textsc{Umann} Kristóf készítette \textsc{Horváth} Gábor gyakorlatán. (\today)
 	\section{A C++ memóriamodellje}
-	A C++ szabvány több memóriatípust különít el. Ezek közül főleg a stack-et használtuk eddig.
+	A C++ szabvány több memóriatípust különít el. Ezek közül elsősorban a stack-et használtuk eddig.
 	\begin{center}
 		\begin{tabular}{|c|}
 			\\
