--- a/06gy_cpp/06gy_cpp.tex
+++ b/06gy_cpp/06gy_cpp.tex
@@ -35,7 +35,7 @@
 		
 		6. óra.
 	\end{center}
-	A jegyzetet \textsc{Umann} Kristóf készítette \textsc{Horváth} Gábor  előadásán. (\today)
+	A jegyzetet \textsc{Umann} Kristóf készítette \textsc{Horváth} Gábor gyakorlatán. (\today)
 	\subsection{Értékadó operátor}
 	Másoló konstruktorunk már van, de az értékadással még mindig lábon lőhetjük magunkat. Hasonlóan a default másoló konstruktorhoz, alapértelmezetten az értékadás operátor (\textit{assignment operator}, vagy röviden \texttt{=}) is bitről bitre másol, így jobb ha felülírjuk.
 \begin{lstlisting}
