--- a/11gy_cpp/11gy_cpp.tex
+++ b/11gy_cpp/11gy_cpp.tex
@@ -35,7 +35,7 @@
 		
 		11. óra.
 	\end{center}
-	A jegyzetet \textsc{Umann} Kristóf készítette \textsc{Brunner} Tibor  előadásán. (\today)
+	A jegyzetet \textsc{Umann} Kristóf készítette \textsc{Brunner} Tibor gyakorlatán. (\today)
 	\section{Objektum orientált programozás}
 	Objektum orientált programozásnál e hármat várjuk el:
 	\begin{itemize}
