--- a/12gy_cpp/12gy_cpp.tex
+++ b/12gy_cpp/12gy_cpp.tex
@@ -35,7 +35,7 @@
 		
 		12. óra.
 	\end{center}
-	A jegyzetet \textsc{Umann} Kristóf készítette \textsc{Brunner} Tibor  előadásán. (\today)
+	A jegyzetet \textsc{Umann} Kristóf készítette \textsc{Brunner} Tibor gyakorlatán. (\today)
 	\medskip
 	
 	
