--- a/04gy_cpp/04gy_cpp.tex
+++ b/04gy_cpp/04gy_cpp.tex
@@ -35,7 +35,7 @@
 		
 		4. óra.
 	\end{center}
-	A jegyzetet \textsc{Umann} Kristóf készítette \textsc{Horváth} Gábor  előadásán. (\today)
+	A jegyzetet \textsc{Umann} Kristóf készítette \textsc{Horváth} Gábor gyakorlatán. (\today)
 	
 	\subsection{Tömbök átadása függvényparaméterként}
 	Próbáljunk meg egy tömböt érték szerint átadni egy függvénynek!
