--- a/06gy_cpp/06gy_cpp.tex
+++ b/06gy_cpp/06gy_cpp.tex
@@ -37,57 +37,51 @@
 	\end{center}
 	A jegyzetet \textsc{Umann} Kristóf készítette \textsc{Horváth} Gábor gyakorlatán. (\today)
 	\subsection{Értékadó operátor}
-	Másoló konstruktorunk már van, de az értékadással még mindig lábon lőhetjük magunkat. Hasonlóan a default másoló konstruktorhoz, alapértelmezetten az értékadás operátor (\textit{assignment operator}, vagy röviden \texttt{=}) is bitről bitre másol, így jobb ha felülírjuk.
+  Az előző órán elkészült másoló konstruktor megoldotta a probléma egy részét, de az értékadással hasonló problémák merülnek fel. Hasonlóan a fordító által generált másoló konstruktorhoz, az alapértelmezetten az értékadás operátor (\textit{assignment operator}, vagy röviden \texttt{=}) is meghívja az egyes tagok értékadó operátorait, amik a primitív típusok esetén bitről bitre másolnak.
 \begin{lstlisting}
 struct List
 {
-	//...
+	// ...
 	
-	//copy constructor
+	// copy constructor
 	List(const List &other) : data(other.data), next(0)
 	{
 		if (other.next != 0)
-		{
 			next = new List(*other.next);
-		}
 	}
 	
-	//assignment operator
+	// assignment operator
 	List& operator=(const List &other)
 	{
 		delete next;
 		data = other.data;
 		if (other.next) // if(other.next) == if(other.next != 0)
-		{
 			next = new List(*other.next);
-		}
 		else
-		{
 			next = 0;
-		}
 		return *this;
 	}
 	
 	//...
 };
 \end{lstlisting}
-	Az új értékadás operátorunk először kitörli az aktuális lista elemeit, majd rekurzív módon átmásolja \texttt{other} elemeit az aktuális listába.
+	Az új értékadás operátor először kitörli az aktuális lista elemeit, majd rekurzív módon lemásolja az \texttt{other} elemeit.
 	
-	Példaképp, a legelső lépés a \texttt{delete next;}-el az összes aktuális listaelem felszabadítása, majd addig hívjuk meg az értékadást rekurzívan, míg az \texttt{other} lista végére nem érünk (erre van az \texttt{if} ág), és ha elértünk oda, akkor zárjuk le az aktuális listát egy nullpointerrel. 
+  Kicsit részletesebben: az első lépés a \texttt{delete next;}, a fejelemet leszámítva felszabadítja az összes többi listaelemhez tartozó memóriaterületet, eztán lemásoljuk az \texttt{other} fejelemében lévő adatot. Végül a másoló konstruktorhoz hasonlóan rekurzív módon lemásoljuk az \texttt{other} farokrészét (amennyiben az létezik).
 	
-	Sikerült elérnünk, hogy ha lemásoljuk a listát, és a másolatot módosítjuk, az eredeti lista nem fog változni.
+  Azáltal, hogy egy listaelem másolásakor az összes listaelem által birtokolt (heapen lévő) objektum is másolásra kerül, elértük azt, hogy a másolaton végzett módosításoknak ne legyen hatása az eredeti objektumra.
 	\medskip
 	
-	Figyeljök meg, hogy referenciával tértünk vissza. Ennek oka az, hogy meg tukjuk tenni ezt:
+	Figyeljük meg, hogy az értékadás operátorban egy az adott objektumra mutató referenciával tértünk vissza. Ennek oka az, hogy szeretnénk, ha lehetséges lenne az értékadások láncolása:
 	\begin{lstlisting}
 			int a = b = c = d = 0; // a = (b = (c = (d = 0)))
 	\end{lstlisting}
-	Itt rendre \texttt{d}-t, \texttt{c}-t, \texttt{b}-t, \texttt{a}-t adjuk vissza, így egymásba fűzhetjük az értékadást.
+  Itt rendre (az operátorok kiértékelési sorrendjét tekintve) \texttt{d}-re, \texttt{c}-re, \texttt{b}-re, \texttt{a}-ra mutató referenciát ad vissza az értékadás operátor, így a végeredmény az lesz, hogy mindegyik változót 0-ra inicializáltuk.
 	\begin{note}
-		Miért nem konstans referenciával térünk vissza? Azért, mert nem tehetnénk meg ezt: (legyen \texttt{f} egy nem konstanst váró függvény) \texttt{f(a = 0)}.
+    Miért nem konstans referenciával térünk vissza? Akkor nem csinálhatnánk hasonlót: (legyen \texttt{f(int \&)}) \texttt{f(a = 0)}.
 	\end{note}
 	
-	Írjunk egy egyszerűbb kiíratást is!
+	Egyszerűsítsük a lista kiírását is!
 	\begin{lstlisting}
 struct List
 {
@@ -103,7 +97,7 @@ struct List
 	//...
 };
 	\end{lstlisting}
-	Nézzük meg mit műveltünk!
+	Ellenőrizzük, hogy az eredeti elemek nem változtak a másolás következtében!
 	\begin{lstlisting}
 int main ()
 {
@@ -118,7 +112,7 @@ int main ()
 	\end{lstlisting}
 	Kimenet: \texttt{7 8 2}
 	
-	Azonban itt még mindig van egy nagy veszély. Ha a listát saját magának adjuk értékül, akkor a legelső lépés továbbra is az, hogy kitöröljük az aktuális lista elemét. így \texttt{cHead = cHead} megsemmisíti önmagát, és use-after-free hibát követnénk el, amikor a destruktor lefut. Persze mondhatnánk, hogy ki az a hülye, aki ilyen csinálna, de sajnos ezt a hibát könnyebb elkövetni mint gondolnánk.
+	Elértük, hogy biztonságos legyen a lista használata? Most már látszólag a másolás és az értékadás sem okozhat memóriakezeléssel kapcsolatos problémát. Van egy eset, amire a kód még nincs felkészítve! Mi történik, ha önmagának adjuk értékül a listát? Az első lépésben törlésre fog kerülni a fejelemet leszámítva minden elem. Eztán a következő lépésekben már felszabadított memóriaterületetről próbáljuk átmásolni a megfelelő adatokat. A \texttt{cHead = cHead} tehát use-after-free hibát fog okozni. Mennyire valós a félelem ettől a hibától? Hiszen nem gyakran adunk értékül egy objektumot önmagának! Tekintsük a következő függvényt:
 	\begin{lstlisting}
 void f(List &l1, List &l2)
 {
@@ -127,32 +121,28 @@ void f(List &l1, List &l2)
 	//...
 }
 	\end{lstlisting}
-	Ha valaki ugyanazt a listát adja meg mindkét paraméternek, akkor máris megvan a baj. Módosítsuk az értékadás operátorunkat:
+	Ha valaki ugyanazt a listát adja meg mindkét paraméternek, akkor máris megvan a baj. Látható tehát, hogy ilyen jellegű hibát nem feltétlen olyan nehéz elkövetni.  Módosítsuk az értékadás operátorunkat oly módon, hogy ne okozzon problémát az önértékadás:
 \begin{lstlisting}
 List& operator=(const List &other)
 {
 	if (this == &other) return *this;
 	delete next;
 	if (other.next)
-	{
 		next = new List(*other.next);
-	}
 	else
-	{
 		next = 0;
-	}
 	return *this;
 }
 \end{lstlisting}
-	Ezzel a probléma el is lett kerülve. Újdonság lehet a \texttt{this} kulcssszó -- ennek segítségével tudunk rámutatni tagfüggvényen belül az adott objektumra. Segíthet a megértésben, ha úgy tekintünk rá, hogy \texttt{head.print()} esetében például sehogyse tudnánk \texttt{print()}-en belül \texttt{head}-re hivatkozni, hisz az objektum neve tagfüggvényen belül nem elérhető. Ezt a problémát hivatott a \texttt{this} kulcsszó orvosolni. \texttt{this} egy konstans pointer, mely az objektum címére mutat.
+  Emlékezzünk, a \texttt{this} kulcssszó segítségével tudunk rámutatni tagfüggvényen belül az adott objektumra, amin a tagfüggvény meghívásra került. Tulajdonképpen arról van szó, hogy például a \texttt{head.print()} esetében enélkül a kulcsszó nélkül nem tudnánk \texttt{print()}-en belül \texttt{head}-re hivatkozni. Az objektum neve tagfüggvényen belül nem elérhető. A \texttt{this} egy pointerként is felfogható, mely a \texttt{head} objektumra mutat.
 	\medskip
 
-	Sikeresen létrehoztunk egy \textit{reguláris típust}.
+	Sikeresen létrehoztunk egy félig \textit{reguláris típust}.
 	\medskip
 	
 	Egy \texttt{T} típus \textbf{reguláris típus}, ha van neki:
 	\begin{enumerate}
-		\item konstruktora
+		\item defualt konstruktora
 		\item destruktora
 		\item értékadás operátora, továbbá
 		\begin{lstlisting}
@@ -167,10 +157,10 @@ T b;
 T a = b;
 		\end{lstlisting}
 		Ekkor \texttt{a} ekvivalens \texttt{b}-vel, és ha \texttt{a}-t módosítjuk, akkot \texttt{b} nem változik, és viszont.
-		\item egyenlőségvizsgálat (\texttt{operator==}) (nem feltétlenül szükséges)
+		\item egyenlőségvizsgálat (\texttt{operator==}) (Ha nincs, akkor az adott típust félig regulárisnak nevezzük)
 	\end{enumerate}
 	\subsection{Adattagok védettsége}
-	Már majdnem készen vagyunk, ám a hülye felhasználó még mindig lábon lőheti magát, pl így:
+	Biztonságossá sikerült tenni a lista használatát? A felhasználó most már a megfelelő metódusok, valamint a másolás és értékadás használatával nem tud elkövetni memóriakezeléssel kapcsolatos hibát. Az adattagokhoz azonban továbbra is hozzá fér. Így, a következő módon továbbra is érhetik meglepetések:
 	\begin{lstlisting}
 int main()
 {
@@ -180,14 +170,14 @@ int main()
 	head.next = 0;
 }
 	\end{lstlisting}
-	Itt az első listaelem utáni elemeket lecsatoljuk, és azoknak a memóriája elszivárog. A baj probléma az, hogy a \textbf{felhasználó hozzáfér az adattagokhoz.} A felhasználó így nagy hülyeséget csinálhat, továbbá ha gyakran hivatkozik belső adattagokra, egyéb baja is lehet. Példaképp, ha a \texttt{List} \texttt{next} adattagjának új nevet adunk, akkor át kéne írni minden olyan kódot ami \texttt{next}re hivatkozik.
+	Itt az első listaelem utáni elemeket lecsatoljuk, és azoknak a memóriája elszivárog. A probléma forrása az, hogy a \textbf{felhasználó hozzáfér az adattagokhoz.} A felhasználó így olyan állapotba állíthatja az adott objektumot, amire az objektum tagfüggvényei nincsenek felkészülve. Másik probléma, hogy a felhasználó azáltal, hogy hozzáfér az adattagokhoz, ki tudja használni a lista belső reprezentációját. Emiatt nehezebben fenntarthatóvá válik a kód, mivel a lista reprezentációját érintő változtatások esetén a felhasználói kódokat is módosítani kell. Példaképp, ha a \texttt{List} \texttt{next} adattagjának új nevet adunk, akkor át kéne írni minden olyan kódot ami \texttt{next}re hivatkozik.
 	
-	Jó lenne, ha hiába változna a belső reprezentáció, a kódnak nem kéne változnia. 
+	Jó lenne, ha hiába változna a belső reprezentáció, a kódnak nem kéne a felhasználói kódnak változnia. 
 	
-	Írjuk át ezt úgy, hogy a felhasználó ne férjen hozzá az adattagokhoz!
+	Rejtsük el az adattagokat a felhasználó elől!
 
 \begin{lstlisting}
-class List //nem struct!
+class List // lehetne struct is
 {
 public:
 	List(int data, List *next = 0) : //...
@@ -199,21 +189,16 @@ private:
 	List *next;
 };
 \end{lstlisting}
-	Az osztály minden adattagja, metódusa mely a \texttt{public} kulcsszó után jön, elérhető bárki számára. A \texttt{private} kulcsszó után következő adatok csak is kizárólag az adott osztályon belül érhető el (nemsokára megismerkedünk egy kivétellel).
+  Az osztály minden tagja, mely a \texttt{public} kulcsszó után jön, elérhető bárki számára. A \texttt{private} kulcsszó után következő adatok csak is kizárólag az adott osztályon belül érhető el (leszámítva a \texttt{friend}eket, de erről később).
 
-	A \texttt{class} majdnem ugynaz mint a \texttt{struct}, csak alapértelmezetten a \texttt{struct} minden adattagja és tagfüggvénye publikus, míg \texttt{class}-nak alapértelmezetten privát. A \texttt{public} ill. \texttt{private} kulcsszóval mind a kettőnél szabályozhatjuk a privát és publikust részt.
+	A \texttt{class} és a \texttt{struct} abban tér el, hogy alapértelmezetten a \texttt{struct} minden tagja publikus, míg \texttt{class}-nak privát. A \texttt{public} ill. \texttt{private} kulcsszóval mind a kettőnél explicit megadhatjuk a láthatóságot.
 	
 	\medskip
-	Azonban van egy igen nagy probléma, ami ennek a módosításnak a követekzménye lett. Például az, hogy így sose tudunk hozzáférni a második elemhez kívülről. Vagy bármelyik másikhoz. Ilyenkor megoldás lehet az, ha módosítjuk a listát, és minden olyan függvényt,  aminek hozzá kéne férnie az elemekhez, metódussá tesszük, hisz a lista metódusai hozzáférnek a privát adattagokhoz is.
+	Van egy súlyos következménye az imént bevezetett adatrejtésnek. Például, így nem tudunk hozzáférni a második elemhez kívülről. Vagy bármelyik másikhoz. Ilyenkor a naív megoldás az, ha módosítjuk a listát, és minden olyan függvényt, aminek hozzá kéne férnie az elemekhez, metódussá tesszük. Hiszen a lista metódusai hozzáférnek a privát adattagokhoz is.
 	
-	Najó, ezt minden egyes függvénnyel lehet nem akarjuk megtenni. A végén egy kilóméter implementációnk lenne, ami nagyon rontaná az olvashatóságot.
+	Ezt ugyanakkor nem akarjuk minden egyes függvénnyel megtenni. A végén nagyra nőne a lista osztály, ami nagyban rontja az kód érthetőségét és fenntarthatóságát. Emellett a reprezentáció változtatásával megint sok függvényt kellene módosítani.
 	
-	Írjunk felsorolót erre a célra, és utána meglátjuk hogy
-	\begin{center}
-		\textit{,,az úgy hülyeség ahogy van.''}
-		
-		/Horváth Gábor/
-	\end{center}
+	Írjunk felsorolót, amivel hozzáférhetünk az elemekhez kívülről is.
 \begin{lstlisting}
 class List
 {
@@ -242,10 +227,10 @@ private:
 	List *cursor;
 };
 \end{lstlisting}
-	Figyeljük meg, hogy \texttt{Current()} referenciával tér vissza, hogy ne \texttt{data} másolatát, hanem magát a \texttt{data}-t kapjuk meg, így tudjuk a lista értékét módosítani.
+	Figyeljük meg, hogy \texttt{Current()} referenciával tér vissza, hogy ne \texttt{data} másolatát, hanem a \texttt{data}-ra hivatkozó referenciát kapjunk meg, így tudjuk a lista elemeinek az értékeit módosítani.
 	
 	\medskip
-	Első látásra a problémát orvosoltuk, tudunk a listákkal tárolt adatokkal dolgozni (pl. összeadni őket, stb). De egy rendezésnél már bajban lehetünk. Például csak 1 darab kurzorunk van, így nem tudunk egyszerre 2 elemhez hozzáférni, hogy összehasonlítsuk őket, lévén csak egy \texttt{cursor} van. Megoldás!:
+	Első látásra a problémát orvosoltuk, tudunk a listákkal tárolt adatokkal dolgozni (pl. összeadni őket, stb). De egy rendezésnél már problémásabb. Ha csak egy kurzorunk van, nem tudunk egyszerre 2 elemhez hozzáférni, hogy összehasonlítsuk őket vagy megcseréljük őket. Egy lehetséges megoldás:
 \begin{lstlisting}
 class List
 {
@@ -292,9 +277,9 @@ private:
 	List *cursor2;
 };
 \end{lstlisting}
-	Oké, ez viccnek talán jó, de könnyű látni, ha mondjuk 3 darab \texttt{cursor} kéne, akkor bajba lennénk, és hosszútávon nem ez a jó hozzáállás. Ez nem elég ahhoz, hogy komplex feladatokat meg tudjunk írni. \textbf{Munkahelyen ilyet ne írjunk!} Töröljük is ki gyorsan, és írjunk egy iterátort!
+	Ezzel már egy rendezést meg tudunk oldani. De talán érezhető, hogy ez nem a legszebb megoldás. Ha három \texttt{cursor} kéne egy algoritmushoz, akkor megint bajban lennénk. Ennél létezik sokkal szofisztikáltabb megoldás.
 	\subsection{Iterátorok}
-	Az iterátorok a pointerek általánosítása, segítségükel tudunk végigiterálni egy konténer elemein (azaz velük tudjuk lekérdezni a konténer elemeit). Ehhez szükségünk van arra, hogy tudjuk hol kezdődik és végződik a konténerünk. E láncolt lista esetében hozzá tudunk férni az első elemhez (az lesz ugye \texttt{head} a fenti példákban) és tudjuk hogy mindig nullpointerrel végződik. Legyen az iterátunk neve \texttt{Iterator}!
+	Az iterátorok a pointerek általánosításai, segítségükel tudunk végigiterálni egy konténer elemein (azaz velük tudjuk lekérdezni a konténer elemeit). Ehhez szükségünk van arra, hogy tudjuk hol kezdődik és végződik a konténerünk. E láncolt lista esetében hozzá tudunk férni az első elemhez (az lesz ugye \texttt{head} a fenti példákban) és tudjuk hogy mindig nullpointerrel az utolsó elemben lévő mutató értéke. Legyen az iterátunk neve \texttt{Iterator}!
 \begin{lstlisting}
 class List
 {
@@ -310,7 +295,7 @@ public:
 	}
 };
 \end{lstlisting}
-	E két metódus segítségével már meg tudjuk adni a lista elejét és végét! \texttt{head.begin()} lesz \texttt{head} a legelső eleme, \texttt{head.end()} az utolsó utáni elem. Már csak magát az iterátort kell megírni, mely egy un. \textit{forward iterator} lesz.
+	E két metódus segítségével már meg tudjuk adni a lista elejét és végét! A \texttt{head.begin()} vissza fog adni egy iterátort, ami a \texttt{head} a legelső elemére mutat, \texttt{head.end()} az utolsó utáni elem. Már csak magát az iterátort kell megírni, mely egy un. \textit{forward iterator} lesz.
 	\medskip
 
 	Egy \texttt{T} típus \textbf{forward iterator}, ha rendelkezik:
@@ -320,7 +305,7 @@ public:
 		\item egyenlőtlenség vizsgáló operátorral \texttt{!=}
 		\item dereferáló operátorral \texttt{*}
 	\end{enumerate}
-	De hova írjuk az \texttt{Iterator} osztályt? Hiszen ha a lista elé tesszük, az \texttt{Iterator} nem fogja tudni, hogy mi az a \texttt{List}. Ha utána tesszük, nem fogja tudni a \texttt{List} hogy mi az az \texttt{Iterator}, úgy meg nem műküdne az \texttt{end} és a \texttt{begin} metódus. Ehhez \textbf{forward deklarálni} fogunk.
+	De hova írjuk az \texttt{Iterator} osztályt? Hiszen ha a lista elé tesszük, az \texttt{Iterator} nem fogja tudni, hogy mi az a \texttt{List}. Ha utána tesszük, nem fogja tudni a \texttt{List} hogy mi az az \texttt{Iterator}. Erre szükség van a Listában az \texttt{end} és a \texttt{begin} metódus megírásához. A körkörös függőség feloldása érdekében \textbf{forward deklarálni} fogunk.
 	\begin{lstlisting}
 class List; //forward declaration
 
